# fluoly

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  fluoly.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: README.rst
modules/: fget.py
repo/: mcblend.json  regolith.json
src/: fluoly.py
tests/: test-fluoly.py
