[tool.poetry]
name = "fluoly"
version = "0.0.1-alpha"
description = "An Open Source Add-on Library/Repo for Minecraft: Bedrock Edition."
authors = ["Retcy"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0 "
click = "^8.0.1 "
wget = "^3.2 "
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
